decafexpr/output/dev/llvm/default-passes.llvm.bc.err
/usr/local/Cellar/llvm38/3.8.0/lib/llvm-3.8/bin/llvm-as: /Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/output/dev/llvm/default-passes.llvm:6:1: error: expected instruction opcode
}
^
